--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bulma": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
